# agent-saga

./: .gitattributes  .gitignore  BEAST_SPECIFICATION.md  CONTRIBUTING.md  MANUAL.md  NOTICE  PROVENANCE.md  README.md  SECURITY.md  THREAT_MODEL.md  TRADEMARKS.md  UMIP.md  pyproject.toml  vercel.json
.claude/: launch.json
.github/workflows/: bench.yml  publish.yml  safety.yml
agent_saga/: __init__.py  _version.py  ai_engine.py  approvals.py  auto.py  bpmn.py  breaker.py  certify.py  chaos.py  cli.py  cloud.py  cloud_server.py  config.py  context.py  decorator.py  determinism.py  durable.py  encryption.py  entanglement.py  executors.py  feedback.py  gate.py  gc.py  ha.py  hallucination.py  hardware.py  healing.py  idempotency.py  integrity.py  killswitch.py  ledger.py  limits.py  locks.py  mesh.py  mission_critical.py  observability.py  orchestrator.py  predictive.py  propagation.py  provenance.py  (+20 more)
agent_saga/adapters/: __init__.py  _common.py  autogen.py  base_db.py  camunda.py  crewai.py  langgraph.py  llamaindex.py  openai_agents.py  sqlalchemy.py  supabase.py  temporal.py
agent_saga/connectors/: __init__.py  _secrets.py  cloud.py  github.py  messaging.py  postgres.py  salesforce.py  stripe.py
agent_saga/frameworks/: __init__.py  fastapi.py
agent_saga/mcp/: __init__.py  policy.py  proxy.py  stdio.py
agent_saga/observability/: __init__.py  langchain.py  otel.py  otlp.py
agent_saga/patterns/: __init__.py  tentative.py
agent_saga/ui/: __init__.py  __main__.py  dashboard.py  reader.py  server.py
agent_saga/ui/templates/: dashboard.html
agent_saga/wal/: __init__.py  async_sink.py  base.py  file_wal.py  mmap_wal.py  postgres_wal.py  redis_wal.py
approvals.json/: req_slack.json
bench/: bench_beast.py  bench_core.py  bench_wal.py  results.json  summarize.py
docs/: EDGE_WASM_FEASIBILITY.md
examples/: chaos_demo.py  demo.py  hallucination_recovery.py  multi_domain.py
launch/: show-hn.md
pytest-agent-saga/: README.md  pyproject.toml
pytest-agent-saga/pytest_agent_saga/: __init__.py  plugin.py
scripts/: ci_safety_scenario.py
site/: index.html
tests/: chaos_ledger.py  chaos_worker.py  conftest.py  crash_worker.py  tentative_crash_worker.py  test_adapters_crewai_openai.py  test_adapters_llamaindex_autogen.py  test_ai_engine_synergy.py  test_approvals.py  test_async_sink_wal.py  test_audit_hardening.py  test_beast_ha_vault.py  test_bpmn_studio.py  test_breaker.py  test_certify.py  test_chaos.py  test_chaos_engine.py  test_cloud_control_plane.py  test_connector_reconcilers.py  test_connectors.py  test_core.py  test_durable.py  test_embedding_risk.py  test_encryption.py  test_executors.py  test_fallback.py  test_fastapi_lifespan.py  test_gc.py  test_hardware.py  test_idempotency.py  test_integrity.py  test_killswitch.py  test_langgraph_adapter.py  test_limits.py  test_locks.py  test_locks_deadlock.py  test_locks_heartbeat.py  test_mcp.py  test_mesh.py  test_mesh_fuzz.py  (+33 more)
