[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-saga"
version = "0.1.0"
description = "Transactional boundaries, typed compensation semantics, and a pre-flight safety gate for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "SagaOps" }]
maintainers = [{ name = "SagaOps" }]
keywords = ["ai-agents", "saga", "rollback", "compensation", "llm", "observability"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://sagaops.dev"
Repository = "https://github.com/thomasjgeorge23/agent-saga"
Issues = "https://github.com/thomasjgeorge23/agent-saga/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "langchain-core>=0.3"]
langgraph = ["langchain-core>=0.3", "langgraph>=0.2"]
crewai = ["crewai"]
openai-agents = ["openai-agents"]
llamaindex = ["llama-index-core>=0.11"]
autogen = ["autogen-core>=0.4"]
postgres = ["psycopg>=3.1"]
stripe = ["stripe>=5.0"]
salesforce = ["httpx>=0.24"]
encryption = ["cryptography>=41.0"]
all = [
    "langchain-core>=0.3", "langgraph>=0.2", "crewai", "openai-agents",
    "llama-index-core>=0.11", "psycopg>=3.1", "stripe>=5.0", "httpx>=0.24",
    "cryptography>=41.0",
]

[project.scripts]
agent-saga = "agent_saga.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_saga"]
# The dashboard is a data file, not a module -- ship it in the wheel.
artifacts = ["agent_saga/ui/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
filterwarnings = ["error"]
