[build-system]
# >=1.27 is the floor for PEP 639 (SPDX `license` expression + `license-files`,
# metadata 2.4). An older hatchling silently ignores both and ships a wheel with
# no declared license at all.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-saga"
version = "0.1.3"
description = "Transactional boundaries, typed compensation semantics, and a pre-flight safety gate for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
# NOTICE is required downstream by Apache-2.0 section 4(d); TRADEMARKS.md states
# the section 6 carve-out. Both travel with the wheel, not just the repo.
license-files = ["LICENSE", "NOTICE", "TRADEMARKS.md"]
authors = [{ name = "SagaOps" }]
maintainers = [{ name = "SagaOps" }]
keywords = ["ai-agents", "saga", "rollback", "compensation", "llm", "observability"]
classifiers = [
    # No `License ::` classifier: PEP 639 deprecates it in favour of the SPDX
    # expression above, and PyPI rejects a distribution that carries both.
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://sagaops.dev"
Repository = "https://github.com/thomasjgeorge23/agent-saga"
Issues = "https://github.com/thomasjgeorge23/agent-saga/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "langchain-core>=0.3"]
langgraph = ["langchain-core>=0.3", "langgraph>=0.2"]
crewai = ["crewai"]
openai-agents = ["openai-agents"]
llamaindex = ["llama-index-core>=0.11"]
autogen = ["autogen-core>=0.4"]
postgres = ["psycopg>=3.1"]
stripe = ["stripe>=5.0"]
salesforce = ["httpx>=0.24"]
encryption = ["cryptography>=41.0"]
redis = ["redis>=5.0.0"]
opentelemetry = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]
all = [
    "langchain-core>=0.3", "langgraph>=0.2", "crewai", "openai-agents",
    "llama-index-core>=0.11", "psycopg>=3.1", "stripe>=5.0", "httpx>=0.24",
    "cryptography>=41.0", "redis>=5.0.0",
    "opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
agent-saga = "agent_saga.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_saga"]
# The dashboard is a data file, not a module -- ship it in the wheel.
artifacts = ["agent_saga/ui/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
filterwarnings = ["error"]
